# scargo

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tasks.py
examples/: README.md
examples/bash_step/: append-sh.j2  append.sh  bash_step.py  bash_step.yaml  params.yaml
examples/csv_iter/: add_alpha.csv  csv_iter.py  csv_iter.yaml  params.yaml
examples/csv_iter_with_condition/: add_numbers.csv  conditional_command.yaml  csv_iter_with_cond.py  csv_iter_with_cond.yaml  nargo_solution.py  params.yaml
examples/data/: .gitignore  README.md
examples/full_artifacts/: full_artifacts.py  full_artifacts.yaml  params.yaml
examples/multi_step/: multi_step.py  multi_step.yaml  params.yaml
examples/multi_step_with_condition/: multi-step-with-cond-parameters.yaml  multi-step-with-cond.yaml  multi_step_with_cond.py  multi_step_with_cond.yaml  params.yaml
examples/python_step/: params.yaml  python_step.py  python_step.yaml
scargo/: args.py  cli.py  core.py  decorators.py  errors.py  functions.py  paths.py  project_main.py  template.py
scargo/tests/: conftest.py  test_cli.py  test_examples.py  test_project_main.py  test_template.py  test_transpiler.py
scargo/transpile/: README.md  entrypoint.py  resolve.py  transformer.py  transpiler.py  types.py  utils.py  workflow_step.py  yaml_io.py
scargo/transpile/tests/: conftest.py  test_resolve.py  test_transformer.py  test_transpiler.py  test_utils.py
