[tool.poetry]
name = "scargo"
version = "0.0.1"
description = "Code for scargo project."
authors = ["ProteinQure team <team@proteinqure.com>"]
license = "Proprietary"


[[tool.poetry.source]]
name = "ProteinQure"
url = "https://pypi.proteinqure.com/simple"


[tool.poetry.dependencies]
python = "~3.9.0"
typer = "^0.3.2"
pyyaml = "^5.4.1"
astor = "^0.8.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-console-scripts = "^1.1.0"
coverage = "^5.4"
pylint = "^2.6.0"
pre-commit = "^2.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
scargo = 'scargo.cli:run'


[tool.black]
line-length = 120
target-version = ["py38"]


[tool.coverage.run]
omit = [
    "*/site-packages/*",
    "*__init__.py",
    "*/tests/*"
]


[tool.pytest.ini_options]
norecursedirs = [
    ".*",
    "*.egg",
    "build",
    "dist"
]


[tool.pylint.messages_control]
disable = [
    "arguments-differ",
    "assignment-from-no-return",
    "attribute-defined-outside-init",
    "bad-continuation",
    "blacklisted-name",
    "comparison-with-callable",
    "duplicate-code",
    "fixme",
    "import-error",
    "invalid-name",
    "invalid-sequence-index",
    "len-as-condition",
    "literal-comparison",
    "no-else-raise",
    "no-else-return",
    "no-member",
    "no-name-in-module",
    "no-self-use",
    "not-an-iterable",
    "not-context-manager",
    "protected-access",
    "redefined-builtin",
    "stop-iteration-return",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-return-statements",
    "too-many-statements",
    "unexpected-keyword-arg",
    "unidiomatic-typecheck",
    "unsubscriptable-object",
    "unsupported-assignment-operation",
    "unused-argument",
    "abstract-method",
    "bad-continuation",
    "bad-string-format-type",
    "broad-except",
    "not-callable",
    "chained-comparison",
    "consider-iterating-dictionary",
    "consider-merging-isinstance",
    "consider-using-in",
    "cyclic-import",
    "eval-used",
    "exec-used",
    "expression-not-assigned",
    "global-statement",
    "inconsistent-return-statements",
    "invalid-unary-operand-type",
    "keyword-arg-before-vararg",
    "logging-format-interpolation",
    "missing-docstring",
    "nonexistent-operator",
    "pointless-statement",
    "redefined-argument-from-local",
    "redefined-outer-name",
    "reimported",
    "single-string-used-for-slots",
    "superfluous-parens",
    "too-many-ancestors",
    "trailing-comma-tuple",
    "undefined-loop-variable",
    "unexpected-special-method-signature",
    "unnecessary-pass",
    "unused-variable"
]
max-line-length = 120
reports = "no"
score = "no"
